2002-05-07  Anders Carlsson  <andersca@gnu.org>

	* gdk/x11/xsettings-client.c (xsettings_client_process_event): 
	Only process manager events with the correct atom.

2002-05-07  Matthias Clasen  <maclas@gmx.de>

	Fix for #79248:
	
	* gdk/x11/gdkwindow-x11.c (gdk_window_new): 
	(gdk_window_set_events): Always select for property notify for
	maintaining window state.

	* gdk/x11/gdkevents-x11.c (gdk_event_translate): Only propagate
	property notifys if they were selected by gdk_window_set_events.

Mon May  6 23:48:14 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_map_expanded_rows_helper): call
	func on current node before the child nodes.

Mon May  6 23:17:42 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_motion_draw_column_motion_arrow):
	unset user_data before destroying the window. (fixes #80065).

Mon May  6 12:17:14 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Fix versioning to avoid changing the
	soname!

	[ merge from stable ]

	* Makefile.am (EXTRA_DIST): Add ChangeLog.pre-2-0 (#78641)

	* m4macros/gtk-2.0.m4: save CFLAGS/LIBS properly when
	compiling "what went wrong" test case. (#79329)

	* m4macros/gtk-2.0.m4: Remove reference to editing
	pkg-config script. (From Jim Gettys)

02-05-05  Matthias Clasen  <maclas@gmx.de>

	* configure.in: Bump version to 2.1.0, binary, interface age 0.

	* gtk/gtkcontainer.c (gtk_container_class_list_child_properties): 
	(gtk_container_class_find_child_property): Document.

	* gtk/gtkwidget.c: 
	* gtk/gtkwidget.h: New functions gtk_widget_class_list_child_properties
	and gtk_widget_class_find_child_property.  (#80652)
	
Sun May  5 15:56:50 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Fix problem with == in test argument.
	(#80732, Hidetoshi Tajima)

Sun May  5 16:42:32 2002  Kristian Rietveld  <kris@gtk.org>

	The "big treeview focus patch". Fixes several issues and adds some
	goodies. Related bugs: #73676, #73734, #78660.
