@@ -1,3 +1,13 @@
+2002-05-07  Michael Natterer  <mitch@gimp.org>
+
+	* configure.in: added a new conditional CROSS_COMPILING which
+	indicates ($build != $host). If it is set, look for
+	gdk-pixbuf-csource in PATH. Error out if it was not found.
+
+	* gtk/stock-icons/Makefile.am: use the gdk-pixbuf-csource found at
+	configure time if CROSS_COMPILING is set, use the one which was
+	just built otherwise.
+
 2002-05-07  Anders Carlsson  <andersca@gnu.org>
 
 	* gdk/x11/xsettings-client.c (xsettings_client_process_event): 
