@@ -879,6 +879,16 @@ fi
 
 AM_CONDITIONAL(USE_MMX, test x$use_mmx_asm = xyes)
 
+dnl Look for a host system's gdk-pixbuf-csource if we are cross-compiling
+
+AM_CONDITIONAL(CROSS_COMPILING, test $build != $host)
+
+if test $CROSS_COMPILING; then
+  AC_PATH_PROG(GDK_PIXBUF_CSOURCE, gdk-pixbuf-csource, no)
+  if test x$GDK_PIXBUF_CSOURCE = xno; then
+    AC_MSG_ERROR(Could not find a gdk-pixbuf-csource in your PATH)
+  fi
+fi
 
 GDK_PIXBUF_PACKAGES="gmodule-2.0 gobject-2.0"
 GDK_PIXBUF_EXTRA_LIBS="$STATIC_LIB_DEPS $MATH_LIB"
